# jmstate

./: README.md  pyproject.toml
.github/workflows/: test.yml
data/: SHA256SUMS  pbc2.csv
docs/source/: base_hazards.rst  index.rst  model.rst  modules.rst  utils.rst
jmstate/functions/: base_hazards.py
jmstate/model/: _base.py  _fit.py  _hazard.py  _predict.py  _sampler.py
jmstate/types/: _data.py  _defs.py  _parameters.py
jmstate/utils/: __init__.py  _checks.py  _linalg.py  _plot.py  _surv.py
scripts/: fitting-test.ipynb  paquid-test.ipynb  pbc2-test.ipynb
tests/: __init__.py  _helpers.py  test_data.py  test_fit.py  test_hazards.py  test_linalg.py  test_parameters.py  test_predict.py  test_sampler.py
