[project]
name = "jmstate"
description = "Joint modeling with automatic differentiation"
readme = "README.md"
urls = { "Source" = "https://github.com/felixlaplante/jmstate" }
authors = [{ name = "Félix Laplante" }]
requires-python = ">=3.11"
dependencies = ["numpy", "torch", "matplotlib", "scikit-learn", "rich", "tqdm"]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
test = ["pytest>=8,<10", "pytest-cov>=5,<8"]

[build-system]
requires = ["setuptools>=42", "setuptools-scm[toml]>=6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jmstate", "jmstate.*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
jmstate = ["py.typed"]

[tool.ruff]
lint.select = [
    "D",   # pydocstyle (docstring conventions)
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate (commented code)
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
]
lint.ignore = ["D417", "PLR0913", "PLR0917"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D103", "S101", "PLR2004"]

[tool.pytest.ini_options]
pythonpath = ["."]
